added prettier, modified stringy.ys

--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "i": "^0.3.4",
     "istanbul": "^0.4.2",
     "mocha": "^2.3.4",
+    "prettier": "^3.6.2",
     "sinon": "^1.17.2"
   },
   "dependencies": {
-    "lodash": "^4.4.0",
-    "prettier": "^3.6.2"
+    "lodash": "^4.4.0"
   }
 }
